Removing unnecessary "public" and adding useful "final" for Matrix.ContinuationMode